# aoc_25

./: .gitignore  README.md  aoc2025.cabal
lib/: AoCUtils.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs
