cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
build-type:         Simple

common shared-properties
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:    base ^>=4.18.0.0
                    , text ^>=2.0
                    , containers ^>=0.6
                    , split ^>=0.2

executable day01
    import:           shared-properties
    main-is:          Day01.hs
    hs-source-dirs:   src
    build-depends:    aoc2025

executable day02
    import:           shared-properties
    main-is:          Day02.hs
    hs-source-dirs:   src
    build-depends:    aoc2025

executable day03
    import:           shared-properties
    main-is:          Day03.hs
    hs-source-dirs:   src
    build-depends:    aoc2025


library
    import:           shared-properties
    exposed-modules:  AoCUtils
    hs-source-dirs:   lib
